AN-23142 - added full width to forms inside of .ajax-processed to prevent the form element from shrink wrapping to the size of the content on submit, when ajax.js starts messing with the DOM.

--- a/css/views-admin.css
+++ b/css/views-admin.css
@@ -178,6 +178,17 @@
 
 /* @end */
 
+/* @group Drupal overrides */
+
+#views-ajax-body form {
+  // The .progress-disabled class added to the form on submit floats the element
+  // left and causes the form width to shrink-wrap to the content. Setting the
+  // width to 100% prevents this.
+  width: 100%;
+}
+
+/* @end */
+
 /* @group Clearfix
  * 
  * @see http://perishablepress.com/press/2009/12/06/new-clearfix-hack
